k8s/apps/chat/base/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  labels:
    app: chat-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      serviceAccountName: chat
      containers:
        - name: chat-backend
          image: us-central1-docker.pkg.dev/kame-457417/kame-house-images/chat-backend:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
