k8s/apps/chat/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  labels:
    app: chat-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
        istio-injection: enabled
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: portfolio-workload-identity
      # Enable Istio sidecar injection explicitly
      automountServiceAccountToken: true
      containers:
        - name: chat-frontend
          image: us-central1-docker.pkg.dev/kame-457417/kame-house-images/chat-frontend:latest
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  labels:
    app: chat-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
        istio-injection: enabled
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: chat
      # Enable Istio sidecar injection explicitly
      automountServiceAccountToken: true
      containers:
        - name: chat-backend
          image: us-central1-docker.pkg.dev/kame-457417/kame-house-images/chat-backend:latest
          ports:
            - containerPort: 4000
          startupProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
