k8s/apps/chat/base/acme-challenge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-challenge
  labels:
    app: chat
spec:
  type: ClusterIP
  selector:
    acme.cert-manager.io/http01-solver: 'true'
  ports:
    - name: http
      port: 80
      targetPort: 8089
