k8s/apps/chat/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ExternalName
  externalName: chat-redis.us-central1.gcp.cloud.redislabs.com
  ports:
    - port: 6379
      targetPort: 6379
