k8s/apps/chat/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  labels:
    app: chat-backend
spec:
  type: ClusterIP
  selector:
    app: chat-backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
