k8s/apps/chat/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  labels:
    app: chat-frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: chat-frontend
  type: ClusterIP
