k8s/apps/chat/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  labels:
    app: chat-frontend
spec:
  type: ClusterIP
  selector:
    app: chat-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  labels:
    app: chat-backend
spec:
  type: ClusterIP
  selector:
    app: chat-backend
  ports:
    - name: http
      port: 80
      targetPort: 4000
