k8s/apps/chat/base/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: chat-gateway
  namespace: prod
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - 'chat.hugecat.net'
      tls:
        mode: SIMPLE
        credentialName: chat-alt-tls-cert
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'chat.hugecat.net'
