k8s/apps/chat/base/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: chat-virtualservice
  namespace: prod
spec:
  hosts:
    - 'chat.hugecat.net'
    - 'chat-backend.hugecat.net'
  gateways:
    - chat-gateway
  http:
    - match:
        - uri:
            prefix: /.well-known
      route:
        - destination:
            host: acme-challenge.default.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: chat-backend
            port:
              number: 4000
