k8s/apps/chat/base/istio-gateway-authz-override.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: portfolio-gateway-override
  namespace: istio-system
  labels:
    app: portfolio
  annotations:
    fluxcd.io/automated: 'true'
    policy.kubernetes.io/validate: 'true'
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - 'chat.hugecat.net'
